<resources>
    <string name="app_name">MobileUts</string>
    <string name="restoran_name">Store</string>
    <string name="name">Your Name</string>
    <string name="name_input">Please fill your name</string>
    <string name="submit">Submit</string>
    <string name="name_input_hint">Please fill your name</string>
    <string name="user">User</string>
    <string name="hello_user">Hello, User</string>
    <string name="store">Store</string>
    <string name="location_user">location user</string>
    <string name="city">city</string>
    <string name="location">Location</string>
    <string name="find_on_maps">Find on Maps</string>
    <string name="location_icon">location_icon</string>
    <string name="see_menus">See Menus</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_input_description">Fill your Name</string>
    <string name="pepperoni_pizza">Pepperoni Pizza</string>
    <string name="pizza_text">Cocok bagi anda yang ingin merasakan pizza original dengan taburan keju dan daging asap yang lezat</string>
    <string name="spaghetti">Spaghetti</string>
    <string name="spaghetti_text">Cocok bagi anda yang ingin merasakan spaghetti original dengan bumbu yang oriental</string>
    <string name="burger_text">Cocok bagi anda yang ingin merasakan kelembutan burger berlapis keju, sayuran dan daging yang tebal</string>
    <string name="burger">Burger</string>
    <string name="steak_text">Cocok bagi anda yang ingin merasakan lezatnya daging steak dipadukan dengan kentang yang lezat</string>
    <string name="steak">Steak</string>
    <string name="title_activity_fourt">FourtActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="toast_pepperoni_pizza">You choose Pepperoni Pizza</string>
    <string name="toast_spaghetti">You choose Spaghetti</string>
    <string name="toast_burger">You choose Burger</string>
    <string name="toast_steak">You choose Steak</string>
    <string-array name="kota">
        <item>Cibiru</item>
        <item>Buah Batu</item>
        <item>Ujung Berung</item>
        <item>Dipatiukur</item>
        <item>Antapani</item>
    </string-array>

    <string name="pepperoni_banner">Pepperoni banner</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="back">Back</string>
    <string name="order_now">Order Now</string>
    <string name="pizza_harga">Prize: Rp. 66.000,00</string>
    <string name="order_detail">Order Detail</string>
    <string name="user_order">user</string>
    <string name="store_city">Store: city</string>
    <string name="menus_order">Pepperoni pizza sudah dipesan</string>
    <string name="pengirman">Pengirman</string>
    <string name="ambil_sendiri">Ambil Sendiri</string>
    <string name="done">Done</string>
    <string name="fast_delivery">Fast Delivery (minimal 30 menit sampai)</string>
    <string name="terima_kasih">Terima Kasih</string>

    <string name="spaghetti_name">Spaghetti</string>
    <string name="burger_name">Burger</string>
    <string name="steak_name">Steak</string>

    <string name="price_rp_66_000_00">Price: Rp. 66.000,00</string>
    <string name="spaghetti_price">Price: Rp. 30.000,00</string>
    <string name="burger_price">Price: RP. 25.000,00</string>
    <string name="steak_price">Price: RP. 110.000,00</string>

    <string name="pepperoni_desk">Pepperoni pizza adalah pizza yang memiliki topping daging pepperoni sapi asli. Di Italia, pepperoni disebut salame piccante (salami panas). Biasa menjadi bahan baku pizza di Amerika Serikat, yang sering mewakili 30% pelengkap. Pizza ini cocok untuk santap siang ataupun malam anda</string>
    <string name="spaghetti_description">Spaghetti adalah hidangan pasta yang klasik, terdiri dari mie tipis panjang yang biasanya disajikan dengan berbagai jenis saus. Saat disajikan dengan saus tomat dan daging cincang, spaghetti menjadi hidangan yang menggugah selera. Namun, fleksibilitasnya juga memungkinkan variasi lain seperti saus krim, saus pesto, atau campuran berbagai bahan tambahan sesuai selera Anda.</string>
    <string name="burger_description">Burger adalah ikon makanan cepat saji yang tak lekang oleh waktu. Hidangan ini terdiri dari patty daging (biasanya sapi) yang dimasak dengan berbagai tingkat kematangan, ditempatkan di antara roti bundar. Patty ini sering kali disajikan dengan berbagai tambahan seperti selada, tomat, keju, dan beragam saus yang memikat. Rasanya yang gurih dan berlimpah menjadikan burger pilihan favorit bagi banyak orang di seluruh dunia.</string>
    <string name="steak_description">Steak adalah hidangan yang memanjakan pencinta daging. Potongan daging sapi yang tebal ini dipanggang atau digoreng sesuai dengan tingkat kematangan yang diinginkan, mulai dari rare hingga well-done. Dengan citarasa gurih yang khas dan kelembutan dagingnya, steak sering disajikan dengan saus dan tambahan seperti kentang, sayuran, atau bawang yang memadukan kelezatan sempurna dalam setiap gigitannya.</string>

</resources>