<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables, UselessParent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/logo_user"
            android:contentDescription="@string/user"/>

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_user"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/location_user"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/location" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/address_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/store"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/orange"/>

            <TextView
                android:id="@+id/cities"
                android:layout_width="182dp"
                android:layout_height="27dp"
                android:layout_weight="1"
                android:text="@string/city"
                android:textAlignment="textEnd"
                android:textColor="@color/orange"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/maps_lokasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/store_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/location"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/orange"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/find_on_maps"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/orange"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/location_icon"
                android:contentDescription="@string/location_icon" />
        </LinearLayout>
        <Button
            android:id="@+id/button_menu"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/red"
            android:text="@string/see_menus"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="4dp" />
    </LinearLayout>
</LinearLayout>