<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FourthActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/menu_image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/pepperoni_pizza"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/main_pizza" />

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignBottom="@id/menu_image"
            android:background="@drawable/gradien" />

        <TextView
            android:id="@+id/menu_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="24dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/pepperoni_pizza"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/price_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/pizza_harga"
            android:textAlignment="textEnd"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pizza_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:justificationMode="inter_word"
            android:text="@string/pepperoni_desk"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_order"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/red"
            android:text="@string/order_now"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="2dp" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/red"
            android:text="@string/back"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="2dp" />
    </LinearLayout>

</LinearLayout>
