<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_ressto"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:contentDescription="@string/restoran_name"
        app:srcCompat="@drawable/restoran_logo"
        android:layout_gravity="center_horizontal">
    </ImageView>
    <TextView
        android:id="@+id/name_resto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restoran_name"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        android:textColor="@color/orange"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/border_background"
        android:layout_marginBottom="24dp"
        app:cornerRadius="2dp">

        <Spinner
            android:id="@+id/city_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </Spinner>
    </LinearLayout>
    <TextView
        android:id="@+id/nama_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp">
    </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/name_input"
        app:errorIconDrawable="@android:drawable/stat_notify_error"
        app:errorEnabled="true"
        app:errorIconTint="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:background="@drawable/border_background"
            android:maxLines="1"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:backgroundTint="@color/red"
        android:text="@string/submit"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="4dp" />

</LinearLayout>
