<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables, UselessParent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/logo_user"
                android:contentDescription="@string/user"/>

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_user"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pizza_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/pepperoni_pizza"
                app:srcCompat="@drawable/pizza" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/name_pizza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pepperoni_pizza"
                    android:textSize="16sp"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"/>

                <TextView
                    android:id="@+id/name_pizza_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza_text"
                    android:textColor="@color/orange"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/spaghetti_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/spaghetti"
                app:srcCompat="@drawable/spageti" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/nama_spaghetti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spaghetti"
                    android:textSize="16sp"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"/>

                <TextView
                    android:id="@+id/nama_spaghetti_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spaghetti_text"
                    android:textColor="@color/orange"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/burger_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/burger"
                app:srcCompat="@drawable/burger" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/nama_burger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="2dp"
                    android:text="Burger"
                    android:textColor="@color/orange"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nama_burger_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/burger_text"
                    android:textColor="@color/orange"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/steak_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/steak"
                app:srcCompat="@drawable/steak" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/nama_steak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steak"
                    android:textSize="16sp"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"/>

                <TextView
                    android:id="@+id/nama_steak_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steak_text"
                    android:textColor="@color/orange"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:srcCompat="@drawable/ic_add"
        app:elevation="6dp"
        app:backgroundTint="@color/red"
        app:fabSize="normal"
        app:tint="@android:color/white"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.FloatingActionButton.Circle" />


</androidx.constraintlayout.widget.ConstraintLayout>